<resources>
    <string name="app_name">EmissorWeb</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_confirmar_dados_pedido">Confirmar Dados</string>
    <string name="copy">©</string>
    <string name="testprinterbt2">Test Printer BT 2.0</string>
    <string name="testprinterbt4">Test Printer BT 4.0</string>
    <string name="testprinterusb">Test Printer USB</string>
    <string name="testprinternet">Test Printer NET</string>
    <string name="tickettype">Ticket Type</string>
    <string name="tickettype58mm">58MM Ticket</string>
    <string name="tickettype80mm">80MM Ticket</string>
    <string name="printcount">Print Count</string>
    <string name="printsuccess">Impressão Concluída</string>
    <string name="printfailed">Impressão Falhou</string>
    <string name="title_activity_principal">Emissor Web</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_form_pedidos">Novo Pedido</string>
    <string name="title_activity_gerenciar_banco_producao">Gerenciar Banco de Dados</string>
    <string name="title_activity_relatorios">Relatórios</string>
    <string name="title_activity_impressora">Impressora</string>
    <string name="title_select_device">Selecione o dispositivo</string>
    <string name="title_scanning">Procurando dispositivos&#8230;</string>
    <string name="title_bluetooth_disabled">Bluetooth desabilitado</string>
    <string name="title_read_information">Read information</string>
    <string name="title_print_self_test">Print self test</string>
    <string name="title_print_text">Print text</string>
    <string name="title_print_image">Print image</string>
    <string name="title_print_page">Print page</string>
    <string name="title_print_barcode">Print barcode</string>
    <string name="title_read_card">Read card</string>
    <string name="title_read_barcode">Read barcode</string>
    <string name="title_scan">Escanear</string>
    <string name="title_please_wait">Por favor, espere</string>
    <string name="title_warning">Warning</string>
    <string name="title_address">Endereço</string>
    <string name="title_connect">Conectar</string>
    <string name="title_identity">Identidade</string>
    <string name="title_enrol">Enrol</string>
    <string name="title_check">Check</string>
    <string name="title_get">Get</string>
    <string name="title_fingerprint">Fingerprint</string>
    <string name="title_delete_all">Delete all</string>
    <string name="msg_printing_self_test">Printing self test&#8230;</string>
    <string name="msg_printing_text">Printing text&#8230;</string>
    <string name="msg_printing_image">Printing image&#8230;</string>
    <string name="msg_printing_page">Printing page&#8230;</string>
    <string name="msg_printing_barcode">Printing barcode&#8230;</string>
    <string name="msg_printing_relatorio">Imprimindo Ralatório&#8230;</string>
    <string name="msg_reading_magstripe">Reading magnetic card&#8230;</string>
    <string name="msg_reading_barcode">Reading barcode&#8230;</string>
    <string name="msg_connecting">Conectando ao dispositivo&#8230;</string>
    <string name="msg_unsupport_page_mode">Printer does not supports page mode</string>
    <string name="msg_please_touch_finger">Please touch with finger</string>
    <string name="msg_enrol_identity">Enrol new identity.Please tab and hold finger&#8230;</string>
    <string name="msg_delete_all_identities">Delete all identities&#8230;</string>
    <string name="msg_check_identity">Check identity.Please tab and hold finger&#8230;</string>
    <string name="msg_get_identity">Get identity.Please tab and hold finger&#8230;</string>
    <string name="msg_invalid_identity">Invalid identity</string>
    <string name="msg_downloading_image">Downloading image&#8230;</string>
    <string name="msg_printing_nfce">Imprimindo NFC-e&#8230;</string>
    <string name="msg_printing_nfe">Imprimindo NF-e&#8230;</string>
    <string name="msg_printing_comp_pag_cartao_nfce">Imprimindo Comprovante Pagamento&#8230;</string>
    <string name="msg_printing_comp_pag_pix">Imprimindo Comprovante Pagamento Pix&#8230;</string>
    <string name="printer_info">Printer information</string>
    <string name="card_info">Card information</string>
    <string name="tag_info">Tag information</string>
    <string name="barcode">Barcode</string>
    <string name="card_no">Card#</string>
    <string name="holder">Holder</string>
    <string name="exp_date">Exp date</string>
    <string name="no_card_read">No card information read</string>
    <string name="consumidor_nao_identificado">CONSUMIDOR NAO IDENTIFICADO</string>
    <string name="autorizada">Autorizada</string>
    <string name="em_contigencia">Em Contigencia</string>
    <string name="emitida_em_contigencia">Emitida em contigencia</string>
    <string name="notas_sincronizadas">Todas as notas foram sincronizadas!</string>
    <string name="sincronizar">INICIAR POS</string>
    <string name="zenitech">© Zenitech</string>
    <string name="serial">Serial POS</string>
    <string name="existe_nfc_e_emitida_em_contig_ncia_lembre_se_de_sincronizar_antes_de_fazer_o_fechamento_do_dia">Existe NFC-e emitida em contigência, lembre-se de sincronizar antes de fazer o fechamento do dia.</string>
    <string name="sincronizando">Sincronizando</string>
    <string name="gerando_banco_de_dados">Gerando banco de dados…</string>
    <string name="fazendo_dowloand_do_banco">Fazendo download dos dados…</string>
    <string name="inportando_banco">Importando banco de dados…</string>
    <string name="verificando_serial">Validando serial…</string>
    <string name="ativando_serial">Ativando POS…</string>
    <string name="informe_um_serial">Informe um serial válido!</string>
    <string name="informe_um_codigo_instalacao">Informe um código de instalação válido!</string>
    <string name="sincronizado">POS Iniciado!</string>
    <string name="oops">Oops!</string>
    <string name="txt_app_finalizado">App Finalizado!\nPressione \"INICIAR POS\", para iniciar a remessa</string>
    <string name="nova_nota">Nova NFC-e</string>
    <string name="nova_nfe">Nova NFE</string>
    <string name="consultar_nfe">Consultar NFE</string>
    <string name="relatorios">Relatórios</string>
    <string name="sincronizar_nfc_e">Sincronizar NFC-e</string>
    <string name="status">Status</string>
    <string name="finalizar_remessa">Finalizar Remessa</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_form_pedidos_nfe">Form Pedidos NFE</string>
    <string name="title_activity_confirmar_dados_pedido_nfe">Confirmar Dados NFE</string>
    <string name="title_activity_consultar_nfe">Consultar NF-e</string>
    <string name="ver_introducao">Ver Introduçao</string>
    <string name="filtrar_pedidos">Filtrar Pedidos</string>
    <string name="ultima_numeraco_emitida_nfc_e">Ultima numeração emitida NFC-e:</string>
    <string name="_0">0</string>
    <string name="ultima_numeraco_emitida_nf_e">Ultima numeração emitida NF-e:</string>
    <string name="n_de_serie">Nº de Serie:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="resumo_de_vendas">Resumo de vendas</string>
    <string name="produto">Cód. | \nProduto</string>
    <string name="quant">Quant.</string>
    <string name="val_uni_m_dio">Val. uni. médio</string>
    <string name="valor_total">Valor total</string>
    <string name="nfc_e">NFC-e</string>
    <string name="nf_e">NF-e</string>
    <string name="configuracoes">Outros</string>
    <string name="sobre">Sobre</string>
    <string name="suporte">Suporte</string>
    <string name="cofiguracoes_app">Configurações</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_suporte">Suporte</string>
    <string name="title_activity_app_finalizado">EmissorWeb Mobile</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_configuracoes_app">Configurações</string>
    <string name="title_activity_main_principal">Emissor Web</string>
    <string name="title_home">Principal</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_ajuda">Ajuda</string>
    <string name="title_activity_gerenciar_pagamento_cartao">Processar Pagamento</string>
    <string name="pagamento_aprovado">Pagamento\nAprovado!</string>
    <string name="pagamento_reprovado">Pagamento\nNão Realizado!</string>
    <string name="n_de_parcelas">Nº de parcelas</string>
    <string name="credito">Crédito</string>
    <string name="debito">Débito</string>
    <string name="forma_de_pagamento_escolhida">Forma de pagamento escolhida</string>
    <string name="rs">R$</string>
    <string name="title_activity_cancelar_pagamento_cartao">Cancelar Pagamento</string>
    <string name="retire_o_cartao">Retire o Cartão</string>
    <string name="title_activity_reset_app">Reset App</string>
    <string name="mensagem_reset">Insira o código que você recebeu</string>
    <string name="enviar_transao">Enviar Transação</string>
    <string name="enviar_comprovante_cancelamento">Enviar Comprovante cancelamento</string>
    <string name="cancelar_pagamento">Cancelar Pagamento</string>
    <string name="concluir_pagamento">Concluir Pagamento</string>
    <string name="enviar_comprovante">Enviar Comprovante</string>
    <string name="imprimir_comprovante">Imprimir Comprovante</string>
    <string name="aguarde_processando_pagamento">Aguarde, Processando Pagamento...</string>
    <string name="aproxime_insira_ou_passe_o_cart_o">Aproxime, insira ou passe o cartão</string>
    <string name="status_da_transao">Status da transação:</string>
    <string name="tipo_erro">Tipo Erro</string>
    <string name="msg_erro">Msg Erro</string>
    <string name="sair">SAIR</string>
    <string name="id_do_cliente">Id do Cliente</string>
    <string name="nome_cliente">Nome de Cliente</string>
    <string name="consultar_cliente">CONSULTAR CLIENTE</string>
    <string name="avancar">Avançar</string>
    <string name="mostrar_qrcode_para_pagar">MOSTRAR QRCODE\nPARA PAGAR</string>
    <string name="title_activity_teste_principal2">TestePrincipal2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="zero_reais">0,00</string>
    <string name="valor_forma_pagamento">"Valor da forma de pagamento"</string>
    <string name="valor">Valor:</string>
    <string name="msg_erro_fracionamento">Atenção: \nLimite de quantidade para produtos com NCM 27111910: \nQuantidade máxima por pedido: 5 unidades. \nQuantidade máxima por lote: 100 unidades. \nPor favor, verifique sua lista de produtos.</string>
    <string name="total_rs">Total: R$</string>
    <string name="barra">/</string>
    <string name="cod_autorizaco">Cod. Autorização</string>
    <string name="nsu">NSU</string>
    <string name="n_documento">Nº Documento</string>
    <string name="text_valor">Valor</string>
    <string name="vencimento">Vencimento</string>
    <string name="adicionar_f_p">ADICIONAR F. P.</string>
    <string name="iniciar_pagamento">INICIAR PAGAMENTO</string>
    <string name="finalizar">FINALIZAR</string>
</resources>