<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FinanceiroNFCe"
    tools:showIn="@layout/content_financeiro_nfce">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bgTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textIdTemp"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/total_rs"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTotalItemFinanceiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/zero_reais"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/barra"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/txtTotalFinanceiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:text="@string/zero_reais"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="1dp"
                android:background="#d2d2d2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFinanceiro"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#ececec" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spFormasPagamentoCliente"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#e2e2e2" />

            <LinearLayout
                android:id="@+id/llCredenciadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spDescricaoCredenciadora"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="1dp"
                    android:dropDownWidth="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="4dp"
                    android:background="#e2e2e2" />

                <Spinner
                    android:id="@+id/spBandeiraCredenciadora"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="1dp"
                    android:dropDownWidth="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_margin="4dp"
                    android:background="#e2e2e2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etCodAutorizacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cod_autorizaco"
                        android:imeActionLabel="ADD"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        tools:ignore="Autofill,TextFields" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiNsuCeara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/etNsuCeara"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nsu"
                        android:imeActionLabel="ADD"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        tools:ignore="Autofill,TextFields" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#e2e2e2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDocumento"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="gone">

                <EditText
                    android:id="@+id/txtDocumentoFormaPagamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/n_documento"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/txtValorFormaPagamento"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/text_valor"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilVencimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/txtVencimentoFormaPagamento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vencimento"
                        android:imeOptions="actionSend"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#e2e2e2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/adicionar_f_p"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnPagCartao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/iniciar_pagamento"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:visibility="gone" />

            <View
                android:layout_width="0.8dp"
                android:layout_height="match_parent"
                android:background="#e2e2e2" />

            <Button
                android:id="@+id/btnFinalizarFinanceiro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/finalizar"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>